# pysleuth

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  README.md  pyproject.toml  test.py
.github/workflows/: ci.yaml
pysleuth/: __init__.py  __main__.py
src/: lib.rs  main.rs
