[package]
name = "pywrong"
version = "0.1.1"
authors = ["Shuduo Sang <sangshuduo@gmail.com>"]
edition = "2021"
description = "A Python code linter written in Rust"

[dependencies]
tree-sitter = "0.24.4"
tree-sitter-python = "0.23.4"
anyhow = "1.0.93"
colored = "2.1.0"
clap = { version = "4.5.21", features = ["derive"] }
