[package]
name = "pysleuth"
version = "0.1.2"
authors = ["Shuduo Sang <sangshuduo@gmail.com>"]
edition = "2021"
description = "PySleuth is a Python code linter written in Rust"

[lib]
name = "pysleuth"
crate-type = ["cdylib"]  # Important for building a dynamic library

[dependencies]
tree-sitter = "0.24.4"
tree-sitter-python = "0.23.4"
anyhow = "1.0.93"
colored = "2.1.0"
clap = { version = "4.5.23", features = ["derive"] }
pyo3 = { version = "0.18.0", features = ["extension-module"] }  # For Python bindings
